# wavesharertu

./: .flake8  .gitignore  IO_8CH_DOCUMENTATION.md  README.md  pyproject.toml
src/wavesharertu/: modbus.py
src/wavesharertu/config/: __init__.py  __main__.py  cli.py  config.py
src/wavesharertu/devices/: __init__.py
src/wavesharertu/devices/analog_input/: __init__.py  __main__.py  ai.py
src/wavesharertu/devices/analog_input_B/: __init__.py  __main__.py  ai_b.py
src/wavesharertu/devices/analog_output/: __init__.py  __main__.py  ao.py
src/wavesharertu/devices/ao_ai_loopback/: __init__.py  __main__.py
src/wavesharertu/devices/digital_io/: __init__.py  __main__.py  io.py
tests/: test_digital_io.py  test_modbus.py
