[project]
name = "wavesharertu"
version = "0.2.0"
description = "A Python library and tools for configuring and communicating with Waveshare Modbus RTU devices."
authors = [
    {name = "Samowity"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry]
packages = [{include = "wavesharertu", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
flake8 = "^7.3.0"
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
include = '''
      src\/wavesharertu\/.*\.pyi?$
    | tests\/.*.*\.pyi?$
'''
color = true
diff = false
